fixed integ testcases